# farnight

./: .gitignore  README.md
Resources/YoutubeOpenGL 15 - Stencil Buffer/models/crow-outline/: scene.gltf
Resources/YoutubeOpenGL 16 - Face Culling & FPS Counter/models/statue/: scene.gltf
Resources/YoutubeOpenGL 21 - Instancing/models/asteroid/: scene.gltf
Resources/YoutubeOpenGL 21 - Instancing/models/jupiter/: scene.gltf
YoutubeOpenGL 7 - Going 3D/: Main.cpp  YoutubeOpenGL.vcxproj  json_test.cpp  pyramid.json
YoutubeOpenGL 7 - Going 3D/x64/Debug/: EBO.nativecodeanalysis.sarif  Texture.nativecodeanalysis.sarif  VAO.nativecodeanalysis.sarif  VBO.nativecodeanalysis.sarif  YoutubeOpenGL.exe.recipe  YoutubeOpenGL.ilk  YoutubeOpenGL.vcxproj.FileListAbsolute.txt  shaderClass.nativecodeanalysis.sarif  stb.nativecodeanalysis.sarif  stb.nativecodeanalysis.xml  vc142.idb
YoutubeOpenGL 7 - Going 3D/x64/Debug/YoutubeOpenGL.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  YoutubeOpenGL.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
assets/models/: block.json  cube.json  pyramid.json
farnight/: CMakeLists.txt  CMakeLists.txt.autogen  Main.cpp  Main.h  Output-Debug.txt  Resource.h  Texture.cpp  YoutubeOpenGL.vcxproj  YoutubeOpenGL.vcxproj.filters  cube.json  farnight.cpp  farnight.rc  farnight.sln  farnight.vcxproj  farnight.vcxproj.filters  figure.json  pyramid.json
farnight/player/: character_controller.cpp
farnight/x64/Debug/: farnight.exe.recipe  farnight.ilk  farnight.res  farnight.vcxproj.FileListAbsolute.txt  vc142.idb
farnight/x64/Debug/farnight.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  farnight.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
